--- a/index.css
+++ b/index.css
@@ -22,8 +22,10 @@
 }
 
 .header__content{
-    padding-top: 26px;
+    padding: 26px 130px 0px 130px;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .header__logo{
     background: url("/images/logo.png") no-repeat;
@@ -31,5 +33,246 @@
     height: 78px;
     z-index: 100;
     background-size: contain;
-    margin-left: 130px;
+}
+
+.header__links{
+    width: 412px;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.header__link{
+    text-decoration: none;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 22px;
+    color: #FFFFFF;
+}
+
+.header__tel{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 29px;
+    color: #FFFFFF;
+    text-decoration: none;
+    text-align: right;
+    display: flex;
+    flex-direction: column;
+    margin-left: 226px;
+}
+
+.header__tel-span{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: right;
+}
+
+.header__title{
+    margin: 40px 130px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 38px;
+    line-height: 46px;
+}
+
+.content{
+    margin: 37px 130px 49px 130px;
+}
+
+.cards__sort{
+    display: flex;
+    height: 60px;
+}
+
+.cards__onsort{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 22px;
+    color: #000000;
+    margin: 0;
+}
+
+.cards__price{
+    list-style: none;
+    padding: 0;
+    margin: 0 0 0 48px;
+    width: 92px;
+}
+
+.cards__price-sort{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 22px;
+    color: #000000;
+    position: relative;
+    width: fit-content;
+    margin: 0;
+    cursor: pointer;
+}
+
+.cards__price-sort:after {
+    content: "";
+    width: 8px;
+    height: 8px;
+    position: absolute;
+    left: 130%;
+    top: 14%;
+    border-top: 3px solid #000000;
+    border-right: 3px solid #000000;
+    margin-right: 60px;
+    transform: rotate(135deg);
+   }
+
+.cards__price-low{
+    opacity: 0;
+}
+
+.cards__list{
+    padding: 0;
+    margin: 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 380px);
+    grid-template-rows: repeat(auto-fill, 785px);
+    column-gap: 21px;
+    row-gap: 27px;
+    font-size: 0;
+}
+
+.cards__card{
+      position: relative;
+}
+
+.cards__img{
+    width: 380px;
+    height: 264px;
+    object-fit: cover;
+}
+
+.cards__like{
+    position: absolute;
+    left: 302px;
+    top: 36px;
+    width: 46px;
+    height: 41px;
+    background: url(/images/like.png) no-repeat;
+    object-fit: cover;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    transition: .2s all ease;
+}
+
+.cards__like:hover{
+    top: 33px
+}
+
+.cards__sale{
+    position: absolute;
+    left: 38px;
+    top: 34px;
+    background: #E62D2D;
+    border-radius: 10px;
+    width: 60px;
+    height: 39px;
+    margin: 0;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 39px;
+    padding-left: 18px;
+}
+
+.cards__block{
+    padding: 29px 29px 29px 29px;
+    height: 134px;
+    background: #F3F3F3;
+}
+
+.cards__name{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 29px;
+    color: #000000;
+    margin: 0;
+}
+
+.cards__parameters{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 22px;
+}
+
+.cards__border{
+    height: 26px;
+    border-left: 4px solid #6EBBD3;
+}
+
+.cards__color{
+    margin: 0;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 15px;
+    color: #000000;
+    width: 89px;
+}
+
+.cards__age{
+    margin-right: 33px;
+}
+
+.cards__age-num{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 20px;
+    color: #000000;
+    margin: 0;
+}
+
+.cards__age-des{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 15px;
+    color: #000000;
+    margin: 0;
+}
+
+.cards__price-cat{
+    margin-top: 22px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 29px;
+    color: #000000;
+}
+
+.cards__but{
+    background: #6EBBD3;
+    width: 380px;
+    height: 65px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    color: #FFFFFF;
+    border: none;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    transition: .5s all ease;
+}
+
+.cards__but:hover{
+    background: #2dafd6;
 }
