--- a/index.css
+++ b/index.css
@@ -58,7 +58,6 @@
     border-bottom: 1px solid #FFFFFF;
 }
 
-
 .header__tel{
     font-style: normal;
     font-weight: bold;
@@ -162,7 +161,7 @@
 }
 
 .cards__img{
-    width: 380px;
+    width: 100%;
     height: 264px;
     object-fit: cover;
 }
@@ -285,7 +284,7 @@
 
 .cards__but{
     background: #6EBBD3;
-    width: 380px;
+    width: 100%;
     height: 65px;
     font-style: normal;
     font-weight: bold;
@@ -451,4 +450,59 @@
     background-position: center;
     background-color: #6EBBD3;
     border-radius: 3px;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1280px){
+    .header__content {
+        padding: 26px 80px 0px 80px;
+    }
+
+    .header__tel{
+        margin-left: 0;
+    }
+
+    .content{
+        margin: 37px 80px 49px 80px;
+    }
+
+    .cards__list{
+        grid-template-columns: repeat(auto-fill, 420px);
+    }
+
+    .cards__up{
+        left: 93%;
+    }
+    
+
+    .footer{
+        margin: 83px 80px 114px 80px;
+        padding: 40px 40px;
+    }
+
+    .footer__title{
+        font-size: 38px;
+    }
+
+    .footer__subtitle{
+        font-size: 19px;
+    }
+
+    .footer__input{
+        width: 180px;
+        padding-left: 23px;
+    }
+    
+    .footer__but{
+        width: 175px;
+    }
+
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px){
+
+    
+}
+
+@media screen and (max-width: 767px){
+
 }
