--- a/index.css
+++ b/index.css
@@ -19,6 +19,8 @@
     height: 252px;
     background: linear-gradient( rgba(31, 32, 33, .79), rgba(31, 32, 33, .79)), url("/images/header_img.png");
     background-position: 18%;
+    background-size: cover;
+
 }
 
 .header__content{
@@ -137,7 +139,6 @@
     top: 14%;
     border-top: 3px solid #000000;
     border-right: 3px solid #000000;
-    margin-right: 60px;
     transform: rotate(135deg);
    }
 
@@ -168,7 +169,7 @@
 
 .cards__like{
     position: absolute;
-    left: 302px;
+    right: 32px;
     top: 36px;
     width: 46px;
     height: 41px;
@@ -457,6 +458,11 @@
         padding: 26px 80px 0px 80px;
     }
 
+    .header__title{
+        margin: 40px 80px;
+        font-size: 32px;
+    }
+
     .header__tel{
         margin-left: 0;
     }
@@ -472,7 +478,6 @@
     .cards__up{
         left: 93%;
     }
-    
 
     .footer{
         margin: 83px 80px 114px 80px;
@@ -499,10 +504,246 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px){
+    .header {
+        height: 200px;
+    }
 
+    .header__content{
+        padding: 16px 30px 0px 30px;
+    }
+
+    .header__logo {
+        width: 58px;
+        height: 58px;
+    }
+
+    .header__tel {
+        font-size: 16px;
+        margin-left: 0px;
+    }
+
+    .header__tel-span {
+        font-size: 13px;
+        line-height: 15px;
+    }
+
+    .header__title{
+        margin: 40px 30px;
+        font-size: 28px;
+    }
+
+    .content{
+        margin: 17px 30px 49px 30px;
+    }
+
+    .cards__sort{
+        height: 40px;
+        
+    }
+
+    .cards__list{
+        grid-template-columns: repeat(auto-fill, 343px);
+        justify-content: center;
+    }
+
+    .cards__like{
+        left: 266px;
+    }
+
+    .cards__age{
+        margin-right: 0px;
+    }
+
+    .cards__add {
+        margin-top: 38px;
+        width: 280px;
+        height: 45px;
+    }
+
+    .cards__up {
+        width: 49px;
+        height: 49px;
+        left: 92%;
+        top: 99%;
+    }
+
+    .footer {
+        margin: 43px 30px 114px 30px;
+        padding: 23px 20px;
+    }
+
+    .footer__text{
+        width: 250px;
+    }
+    
+    .footer__title{
+        font-size: 28px;
+    }
+
+    .footer__subtitle{
+        margin: 15px 0 0 0;
+        font-size: 18px;
+    }
+
+    .footer__input {
+        width: 222px;
+        height: 55px;
+        padding-left: 13px;
+    }
+
+    .footer__form{
+        margin-top: 15px;
+    }
+
+    .footer__but {
+        width: 170px;
+        height: 56px;
+        margin-left: 6px;
+    }
     
 }
 
 @media screen and (max-width: 767px){
+    .header {
+        width: 100%;
+        height: 152px;
+        background-position: 30% 78%;
+    }
 
+    .header__content {
+        padding: 16px 15px 0px 15px;
+        align-items: flex-start;
+    }
+
+    .header__logo {
+        width: 38px;
+        height: 38px;
+    }
+
+    .header__links {
+        flex-direction: column;
+        width: 0;
+        opacity: 0;
+    }
+
+    .header__link {
+        font-size: 0px;
+    }
+
+    .header__tel {
+        font-size: 14px;
+        line-height: 19px;
+        margin: 2px 0 0 0;
+    }
+
+    .header__tel-span {
+        font-size: 12px;
+        line-height: 7px;
+    }
+
+    .header__menu{
+        width: 38px;
+        height: 38px;
+        background-image: url("/images/menu.png");
+    }
+
+    .header__title {
+        margin: 15px 15px;
+        font-size: 15px;
+        line-height: 5px;
+    }
+
+    .content{
+        margin: 8px 15px 49px 15px;
+    }
+
+    .cards__sort{
+        height: 30px;
+    }
+
+    .cards__onsort{
+        font-size: 12px;
+    }
+
+    .cards__price {
+        margin: 0 0 0 37px;
+        width: 46px;
+    }
+    
+    .cards__price-sort{
+        font-size: 13px;
+    }
+
+    .cards__price-sort:after {
+        width: 4px;
+        height: 4px;
+        top: 31%;
+        border-top: 2px solid #000000;
+        border-right: 2px solid #000000;
+    }
+
+    .cards__list{
+        grid-template-columns: repeat(auto-fill, 100%);
+        justify-content: center;
+    }
+       
+    .cards__add {
+        margin-top: 28px;
+        width: 180px;
+        height: 45px;
+    }
+    .cards__up {
+        width: 35px;
+        height: 35px;
+        left: 90%;
+        top: 99%;
+    }
+
+    .footer {
+        margin: 18px 15px 18px 15px;
+        padding: 23px 23px;
+    }
+
+    .footer__text{
+        width: 160px;
+        margin-top: 15px;
+    }
+
+    .footer__title{
+        font-size: 18px;
+        line-height: 19px;
+    }
+
+    .footer__subtitle{
+        margin: 16px 0 0 0;
+        font-size: 14px;
+        line-height: 116.2%;
+        width: 103px;
+    }
+    
+
+    .footer__form{
+        margin-top: 15px;
+        display: flex;
+        flex-direction: column;
+        width: 196px;
+    }
+
+    .footer__input {
+        width: 94%;
+        height: 35px;
+        padding-left: 12px;
+    }
+
+    .footer__but {
+        width: 100%;
+        height: 35px;
+        margin: 15px 0 0 0;
+    }
+
+    .footer__filter-input+label {
+        font-size: 12px;
+        line-height: 12px;
+        margin-top: 15px;
+    }
 }
