--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@
 .header{
     width: 100%;
     height: 252px;
-    background: linear-gradient( rgba(31, 32, 33, .79), rgba(31, 32, 33, .79)), url("/images/header_img.png");
+    background: linear-gradient( rgba(31, 32, 33, .79), rgba(31, 32, 33, .79)), url("./images/header_img.png");
     background-position: 18%;
     background-size: cover;
 
@@ -173,7 +173,7 @@
     top: 36px;
     width: 46px;
     height: 41px;
-    background: url(/images/like.png) no-repeat;
+    background: url(./images/like.png) no-repeat;
     object-fit: cover;
     cursor: pointer;
     border: none;
@@ -186,7 +186,7 @@
 }
 
 .cards__like_sold{
-    background: url(/images/like_activ.png) no-repeat;
+    background: url(./images/like_activ.png) no-repeat;
 }
 
 .cards__like_sold:hover{
@@ -341,7 +341,7 @@
     left: 95%;
     top: 98%;
     background-color: #6EBBD3;
-    background-image: url("/images/up.png");
+    background-image: url("./images/up.png");
     background-repeat: no-repeat;
     background-position: center;
     border: none;
@@ -447,7 +447,7 @@
     margin-right: 18px;
     background-repeat: no-repeat;
     background-size: 50%;
-    background-image: url("/images/check.png");
+    background-image: url("./images/check.png");
     background-position: center;
     background-color: #6EBBD3;
     border-radius: 3px;
@@ -644,7 +644,7 @@
     .header__menu{
         width: 38px;
         height: 38px;
-        background-image: url("/images/menu.png");
+        background-image: url("./images/menu.png");
     }
 
     .header__title {
